<resources>
    <string name="app_name">TravelWith</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="main_tab_btn_home">홈</string>
    <string name="main_tab_btn_my_schedule">내일정</string>
    <string name="main_tab_btn_companion">상대</string>
    <string name="main_tab_btn_chat">채팅</string>
    <string name="main_tab_btn_ad">광고</string>

    <string name="facebook_app_id">1111111111111</string>
    <string name="fb_login_protocol_scheme">111111111111111</string>
    <string name="web_client_id">1111111111111.apps.googleusercontent.com</string>

</resources>
